--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
             <div class="logo">
                 <a href="#" class="logo__lnk">
-                    <img src="./images/logo.png" alt="logo" class="logo__img">
+                    <img src="./images/logo.png" alt="サンプルロゴ" class="logo__img">
                 </a>
             </div>
             <div class="btnPrim--headerSP">
@@ -1071,7 +1071,6 @@
                             </a>
                         </div>
                     </div>
-        
                 </div>
         </section>
 
