--- a/index.html
+++ b/index.html
@@ -1179,7 +1179,7 @@
                                     <dl class="news__content">
                                         <dt class="news__date">2021/02/10</dt>
                                         <dd class="news__tag--news"><span>お知らせ</span></dd>
-                                        <dd class="news__txt"><a href="./news/"></a><a href="/news/20201222-505/">
+                                        <dd class="news__txt"><a href="#">
                                                 ≪無料開催ウェビナー≫ 極めた仮説が良い結果を生み出す～”仮説の立て方”強化講座～
                                             </a>
                                         </dd>
@@ -1187,7 +1187,7 @@
                                     <dl class="news__content">
                                         <dt class="news__date">2021/01/22</dt>
                                         <dd class="news__tag--news"><span>お知らせ</span></dd>
-                                        <dd class="news__txt"><a href="./news/"></a><a href="/news/20201202-501/">
+                                        <dd class="news__txt"><a href="#">
                                             【好評につき1/26(火)再放映】特典付･NTTデータ共催WEBセミナーのご案内
                                         </a>
                                     </dd>
@@ -1195,7 +1195,7 @@
                                     <dl class="news__content">
                                         <dt class="news__date">2021/01/20</dt>
                                         <dd class="news__tag--news"><span>お知らせ</span></dd>
-                                        <dd class="news__txt"><a href="./news/"></a><a href="/news/20200720-497/">
+                                        <dd class="news__txt"><a href="#">
                                             【1/27(水)共催 無料セミナー】CM動画／WEB動画の制作・運用過程で、 注意すべきリサーチ指標とは？
                                         </a>
                                     </dd>
@@ -1203,7 +1203,7 @@
                                     <dl class="news__content">
                                         <dt class="news__date">2021/01/14</dt>
                                         <dd class="news__tag--news"><span>お知らせ</span></dd>
-                                        <dd class="news__txt"><a href="./news/"></a><a href="/news/20200428-496/">
+                                        <dd class="news__txt"><a href="#">
                                             【1/21(木)開催 無料共催セミナー】脳情報をクラウドで瞬間分析。最先端のクリエイティブ評価とは
                                         </a>
                                     </dd>
@@ -1211,7 +1211,7 @@
                                     <dl class="news__content">
                                         <dt class="news__date">2021/01/05</dt>
                                         <dd class="news__tag--news"><span>お知らせ</span></dd>
-                                        <dd class="news__txt"><a href="./news/"></a><a href="/news/20200406-490/">
+                                        <dd class="news__txt"><a href="#">
                                                 学術調査チームを発足、研究者／学生の学術研究を支援
                                             </a>
                                         </dd>
@@ -1219,7 +1219,7 @@
                                     <dl class="news__content">
                                         <dt class="news__date">2020/12/02</dt>
                                         <dd class="news__tag--news"><span>お知らせ</span></dd>
-                                        <dd class="news__txt"><a href="./news/"></a><a href="/news/20191202-478/">
+                                        <dd class="news__txt"><a href="#">
                                             仮想バックルームを実装したオンラインインタビューツール「i-PORT voice」をリリース
                                         </a>
                                     </dd>
@@ -1227,7 +1227,7 @@
                                     <dl class="news__content">
                                         <dt class="news__date">2020/11/20</dt>
                                         <dd class="news__tag--news"><span>お知らせ</span></dd>
-                                        <dd class="news__txt"><a href="./news/"></a><a href="/news/20191120-473/">
+                                        <dd class="news__txt"><a href="#">
                                             「日本のマーケティングリサーチ20年の変遷」冊子を無料公開
                                          </a>
                                     </dd>
