--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
                 <ul class="copyNav">
                     <li class="copyNav__itm"><a href="#" class="copyNav__lnk">個人情報保護方針</a></li>
                 </ul>
-                <p>（C）2021 株式会社クインテット</p>
+                <p>© Qwintet Co.,Ltd. All Rights Reserved.</p>
             </div>
         </div>
     </div>
