--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                                                 <h4 class="hdg-4">Webサービス</h4>
                                             </div>
                                             <div class="serviceService__content">
-                                                <h5>夢や目標の実現に向けて挑戦する<br>人々を支えるプラットフォーム</h5>
+                                                <h5>夢や目標の実現に向けて<br>挑戦する人々を支える<br>プラットフォーム</h5>
                                                 <img src="./images/pando.png" alt="Pando">
                                                 <div class="prg-s">
                                                     <div class="richtext">
@@ -262,7 +262,7 @@
                                             </div>
                                             <div class="row">
                                                 <div class="col-12 col-md-5">
-                                                    <div class="u-ta-c">
+                                                    <div class="serviceConsept__img">
                                                         <img src="./images/service--concept.png" alt="ビジネスコンセプトイメージ">
                                                     </div>
                                                 </div>
@@ -335,7 +335,7 @@
                                                 <h4 class="hdg-4">Webサービス</h4>
                                             </div>
                                             <div class="serviceService__content">
-                                                <h5>月間144万人が利用する<br>美容クチコミポータルサイト</h5>
+                                                <h5>月間<span class="fontSize--l">144</span>万人が利用する<br>美容口コミポータルサイト</h5>
                                                 <img src="./images/kuchikomihiroba.png" alt="美容口コミ広場">
                                                 <div class="prg-s">
                                                     <div class="richtext">
@@ -515,7 +515,7 @@
                                         </dd>
                                     </dl>
                                 </div>
-                                <div class="wrap-btn">
+                                <div class="crd-office__btn">
                                     <a href="https://www.google.co.jp/maps/place/%E3%80%92162-0845+%E6%9D%B1%E4%BA%AC%E9%83%BD%E6%96%B0%E5%AE%BF%E5%8C%BA%E5%B8%82%E8%B0%B7%E6%9C%AC%E6%9D%91%E7%94%BA%EF%BC%92%E2%88%92%EF%BC%91%EF%BC%90+STREAM+ICHIGAYA+2F/@35.6902409,139.7293629,17z/data=!3m1!4b1!4m5!3m4!1s0x60188c8aac303fa3:0x1bf0d826a494fc90!8m2!3d35.6902409!4d139.7315569?hl=ja" target="_blank" class="btnPrim--thema">
                                         google Map
                                         <span class="ti-layers"></span>
@@ -550,7 +550,7 @@
                                         </dd>
                                     </dl>
                                 </div>
-                                <div class="wrap-btn">
+                                <div class="crd-office__btn">
                                     <a href="https://www.google.co.jp/maps/search/%E3%80%92534-0024+%E5%A4%A7%E9%98%AA%E5%BA%9C%E5%A4%A7%E9%98%AA%E5%B8%82%E9%83%BD%E5%B3%B6%E5%8C%BA%E6%9D%B1%E9%87%8E%E7%94%B0%E7%94%BA2%E4%B8%81%E7%9B%AE9-7+K2%E3%83%93%E3%83%AB5F%E5%B8%82%E3%83%B6%E8%B0%B72F/@34.6982042,135.5295498,17z/data=!3m1!4b1?hl=ja" target="_blank" class="btnPrim--thema">
                                         google Map
                                         <span class="ti-layers"></span>
@@ -586,7 +586,7 @@
                                         </dd>
                                     </dl>
                                 </div>
-                                <div class="wrap-btn">
+                                <div class="crd-office__btn">
                                     <a href="https://www.google.co.jp/maps/place/%E3%82%B0%E3%83%A9%E3%83%B3%E3%83%91%E3%83%BC%E3%82%AF%E5%A4%A9%E7%A5%9E/@33.5928711,130.3922624,17z/data=!3m1!4b1!4m5!3m4!1s0x354191891f6fffff:0x2c5598efa983e836!8m2!3d33.5928711!4d130.3944511?hl=ja" target="_blank" class="btnPrim--thema">
                                         google Map
                                         <span class="ti-layers"></span>
