--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
                             <div class="prg-l">
                                 <div class="richtext">
                                     <p>
-                                        一人一人が生まれ持った<br>
-                                        最大限の可能性に向かって輝きを解き放ち、<br>
-                                        人生の時々において希望を抱き、<br>
+                                        一人一人が生まれ持った<br class="br-sm">
+                                        最大限の可能性に向かって輝きを解き放ち、<br class="br-sm">
+                                        人生の時々において希望を抱き、<br class="br-sm">
                                         全力を尽くして挑戦し、人生を謳歌できる世界へ。
                                     </p>
                                 </div>
